Fixed layout issues on Adams page

--- a/_themes/tm3/css/layout.css
+++ b/_themes/tm3/css/layout.css
@@ -39,10 +39,7 @@ footer [data-icon]::before
     z-index: 1;
 }
 
-.tile.light *
-{
-    color: #fff;
-}
+.tile.light * { color: #fff; }
 
 .col-full,
 .col-1-2,
@@ -67,6 +64,10 @@ footer [data-icon]::before
 
 .pad { padding: 24px; }
 .pad-horizontal { padding: 0 24px; }
+.pad-left { padding-left: 24px; }
+.pad-right { padding-right: 24px; }
+.pad-bottom { padding-bottom: 24px; }
+.pad-top { padding-top: 24px; }
 .pad-icon-left { padding: 24px 24px 24px 52px; }
 .pad-icon-right { padding: 24px 72px 24px 24px; }
 .pad-vertical { padding: 24px 0; }
@@ -75,6 +76,10 @@ footer [data-icon]::before
 .pad-half-icon-left { padding: 12px 12px 12px 52px; }
 .pad-half-icon-right { padding: 12px 72px 12px 12px; }
 .pad-half-vertical { padding: 12px 0; }
+.pad-half-left { padding-left: 12px; }
+.pad-half-right { padding-right: 12px; }
+.pad-half-bottom { padding-bottom: 12px; }
+.pad-half-top { padding-top: 12px; }
 
 .no-pad { padding: 0 !important; }
 
@@ -111,11 +116,8 @@ footer [data-icon]::before
     [class*='col-']
     {
         float: left;
-        padding-right: 30px;
         position: relative;
     }
-
-    [class*='col-']:last-of-type { padding-right: 0; }
 
     .col-1-8 { width: 12.5%; }
     .col-1-7 { width: 14.28571429%; }
@@ -127,5 +129,5 @@ footer [data-icon]::before
     .col-2-3 { width: 66.66%; }
     .col-3-4 { width: 75%; }
     .col-7-8 { width: 87.5%; }
-    .col-full { padding-right: 0; width: 100%; }
+    .col-full { width: 100%; }
 }
