--- a/_themes/tm3/css/quotes.css
+++ b/_themes/tm3/css/quotes.css
@@ -1,3 +1,24 @@
+.quote
+{
+    font-size: 10px;
+    margin: 0;
+    padding: 24px 0;
+}
+
+.quote figcaption
+{
+    margin-top: 24px;
+}
+
+.quote cite
+{
+    display: block;
+    font-style: normal;
+}
+
+.js .hero .quote { opacity: 0; }
+.hero .quote:first-child { opacity: 1; }
+
 .hero .quotes
 {
     bottom: 44px;
@@ -16,28 +37,14 @@
     right: 0;
 }
 
-.quote
-{
-    font-size: 12px;
-    margin: 0;
-}
-
-.quote figcaption
-{
-    margin-top: 24px;
-}
-
-.quote cite
-{
-    display: block;
-    font-style: normal;
-}
-
-.js .hero .quote { opacity: 0; }
-.hero .quote:first-child { opacity: 1; }
-
 @media (min-width: 768px)
 {
+    .quote
+    {
+        font-size: 11px;
+        padding: 24px;
+    }
+
     .quotes.left
     {
         left: 24px;
