--- a/_themes/tm3/css/typography.css
+++ b/_themes/tm3/css/typography.css
@@ -38,7 +38,7 @@ strong { font-weight: 400; }
 {
     font-size: 1.5em;
     font-weight: 400;
-    line-height: 1.35em;
+    line-height: 1.5em;
     margin: 0;
 }
 
@@ -46,7 +46,7 @@ strong { font-weight: 400; }
 {
     font-size: 1.25em;
     font-weight: 700;
-    line-height: 1.55em;
+    line-height: 1.5em;
     margin: 0;
 }
 
@@ -67,11 +67,7 @@ strong { font-weight: 400; }
     margin: 0;
 }
 
-.body-2
-{
-    font-weight: 700;
-    line-height: 1.75em;
-}
+.body-2 { font-weight: 700; }
 
 /* Lists */
 .list { list-style: none; margin: 0; padding: 0; }
